// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (elm) should build the example with config complete.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "c34ae5d098f9fc75f8da4a9e7dee3971",
  "main.d3c2dd71fc1a25a243ae.css": "5f622c70ad714c19d4d4ff863401721f",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "cf84421fda8a9076827018e267f2bc3b",
  "manifest.545f07f3760bdbcf0b1e.js": "5d0c2d847ac950966adb93a85df4698d",
  "manifest.545f07f3760bdbcf0b1e.js.map": "ddaf2df0199f44d44432fb212dfdef8d",
}
`;

exports[`Compiler (elm) should build the example with config disabled.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "9476bdabbc16d86ddcc7aa10733fe3ea",
  "main.d3c2dd71fc1a25a243ae.css": "5f622c70ad714c19d4d4ff863401721f",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "cf84421fda8a9076827018e267f2bc3b",
  "manifest.545f07f3760bdbcf0b1e.js": "5d0c2d847ac950966adb93a85df4698d",
  "manifest.545f07f3760bdbcf0b1e.js.map": "ddaf2df0199f44d44432fb212dfdef8d",
}
`;

exports[`Compiler (elm) should build the example with config from package.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "390f690ab38ff812961bfbef6f5aab8f",
  "main.d3c2dd71fc1a25a243ae.css": "5f622c70ad714c19d4d4ff863401721f",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "cf84421fda8a9076827018e267f2bc3b",
  "manifest.545f07f3760bdbcf0b1e.js": "5d0c2d847ac950966adb93a85df4698d",
  "manifest.545f07f3760bdbcf0b1e.js.map": "ddaf2df0199f44d44432fb212dfdef8d",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
}
`;

exports[`Compiler (elm) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "c34ae5d098f9fc75f8da4a9e7dee3971",
  "main.d3c2dd71fc1a25a243ae.css": "5f622c70ad714c19d4d4ff863401721f",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "cf84421fda8a9076827018e267f2bc3b",
  "manifest.545f07f3760bdbcf0b1e.js": "5d0c2d847ac950966adb93a85df4698d",
  "manifest.545f07f3760bdbcf0b1e.js.map": "ddaf2df0199f44d44432fb212dfdef8d",
}
`;

exports[`Compiler (elm) should build the example with config manifest.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "01b71389b9c94cfccbce2f039bf5da95",
  "main.d3c2dd71fc1a25a243ae.css": "5f622c70ad714c19d4d4ff863401721f",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "cf84421fda8a9076827018e267f2bc3b",
  "manifest.545f07f3760bdbcf0b1e.js": "5d0c2d847ac950966adb93a85df4698d",
  "manifest.545f07f3760bdbcf0b1e.js.map": "ddaf2df0199f44d44432fb212dfdef8d",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
}
`;

exports[`Compiler (elm) should build the example with config prerender-disabled.json 1`] = `
Object {
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "elm.d138c88ed3811a39d525.js": "87536348363f9cd55f9930f67fe376b2",
  "index.html": "9476bdabbc16d86ddcc7aa10733fe3ea",
  "main.d3c2dd71fc1a25a243ae.css": "5f622c70ad714c19d4d4ff863401721f",
  "main.d3c2dd71fc1a25a243ae.js": "7f0eac78a5600ecd3870aee34b63f96f",
  "main.d3c2dd71fc1a25a243ae.js.map": "cf84421fda8a9076827018e267f2bc3b",
  "manifest.545f07f3760bdbcf0b1e.js": "5d0c2d847ac950966adb93a85df4698d",
  "manifest.545f07f3760bdbcf0b1e.js.map": "ddaf2df0199f44d44432fb212dfdef8d",
}
`;
